include and prepend check no args

* eval.c (rb_mod_include, rb_mod_prepend): check if arguments are
  given, as well as Kernel#extend.  [ruby-dev:49854] [Bug #12887]
  [Fix GH-1470]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@56631 b2dd03c8-39d4-4d8f-98ff-823fe69b080e